@@ -35,7 +35,7 @@ ducts=Very large pipes with enormous throughput capabilities.
 ducts=Ducts
 
 [tips-and-tricks-item-description]
-fmf-auto-join=Contiguous [entity=duct-small]s will automatically join into [entity=duct]s.\nContiguous [entity=duct]s will automatically join into [entity=duct-long]s.\nThis feature can be disabled in the mod settings, in which case, recipes for [item=duct] and [item=duct-long] will be available.
+fmf-auto-join=Contiguous [entity=duct-small]s will automatically join into [entity=duct]s.\nContiguous [entity=duct]s will automatically join into [entity=duct-long]s.\nThis feature can be disabled in the mod settings, in which case, recipes for [entity=duct] and [entity=duct-long] will be available.
 fmf-endpoints=Due to their large size, normal pipes cannot connect directly to ducts. Fluids must enter a duct network via a [entity=duct-intake], and exit via a [entity=duct-exhaust]. Up to six pipes can connect to each endpoint for high-throughput setups.
 fmf-introduction=Ducts allow you to transport large amounts of fluids long distances.
 fmf-non-return-duct=The [entity=non-return-duct] allows you to force fluid to move in one direction. Common usecases are to isolate the production area to avoid waste, prioritize certain branches, or to increase pressure over long distances.
